--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.4
   font_awesome_flutter: ^10.6.0
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/Cst.png
+    - images/basketball_Login.jpeg
+    - images/email.svg
+    - images/google_logo.png
+    - images/password_hide.svg
+    - images/password.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
