--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,25 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "name": "studentlogin",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "program": "lib/my_app.dart" // Set the program attribute to your entry point
         },
         {
             "name": "studentlogin (profile mode)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "profile"
+            "flutterMode": "profile",
+            "program": "lib/my_app.dart" // Set the program attribute to your entry point
         },
         {
             "name": "studentlogin (release mode)",
             "request": "launch",
             "type": "dart",
-            "flutterMode": "release"
+            "flutterMode": "release",
+            "program": "lib/my_app.dart" // Set the program attribute to your entry point
         }
     ]
 }
