--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  postgres: ^2.1.1
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.4
   font_awesome_flutter: ^10.6.0
