--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   image_picker: ^1.0.4
   font_awesome_flutter: ^10.6.0
   flutter_svg: ^2.0.7
-
+  http: ^0.13.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
