--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   flutter_svg: ^2.0.7
   http: ^0.13.3
+  provider: ^6.0.5
   
 dev_dependencies:
   flutter_test:
