--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.0.7
   http: ^0.13.3
   provider: ^6.0.5
+  google_fonts: ^4.0.4
   
 dev_dependencies:
   flutter_test:
