--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   postgres: ^2.1.1
@@ -42,6 +41,7 @@ dependencies:
   http: ^0.13.3
   provider: ^6.0.5
   google_fonts: ^4.0.4
+  autocomplete_textfield: 2.0.1
   
 dev_dependencies:
   flutter_test:
