--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.5
   google_fonts: ^4.0.4
   autocomplete_textfield: 2.0.1
+  intl: ^0.17.0
   
 dev_dependencies:
   flutter_test:
